api to validate qrCode

--- a/PSSK_POC/appsettings.json
+++ b/PSSK_POC/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "ApplicationSettings": {
-    "MandatoryDocumentTypes": "1,2"
+    "MandatoryDocumentTypes": "1,2",
+    "SymmetricCryptoKey": "RW5jcnlwdCBteSB0ZXh0",
+    "ClientSecret": "U21hcnQgQ2l0eSBDbGllbnQgU2VjcmV0"
   },
   "AllowedHosts": "*"
 }
