Creating qrcode uri with encrypted data on document review

--- a/PSSK_POC/PSSK_POC.csproj
+++ b/PSSK_POC/PSSK_POC.csproj
@@ -14,7 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appkeys.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="environment.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
