--- a/PSSK_POC/appsettings.json
+++ b/PSSK_POC/appsettings.json
@@ -8,8 +8,7 @@
   },
   "ApplicationSettings": {
     "MandatoryDocumentTypes": "1,2",
-    "SymmetricCryptoKey": "RW5jcnlwdCBteSB0ZXh0",
-    "ClientSecret": "U21hcnQgQ2l0eSBDbGllbnQgU2VjcmV0"
+    "QRCodeValidationAPI": "{0}api/QRCode/Validate?clientSecret={1}&data={2}"
   },
   "AllowedHosts": "*"
 }
